--- a/flightsaware/src/main/resources/application.properties
+++ b/flightsaware/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=3306
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=WARN
 logging.level.com.springsecurity.demo=DEBUG
@@ -6,9 +6,9 @@ logging.level.com.springsecurity.demo=DEBUG
 ####### Data-Source Properties#######
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://remotemysql.com:3306/IHc0vb95VY
-spring.datasource.username = IHc0vb95VY
-spring.datasource.password = TlzYp5UIO7
+spring.datasource.url = jdbc:mysql://db4.net:3306/rithikabadam
+spring.datasource.username = rithikabadam
+spring.datasource.password = d4e42699
 
 
 ###### JPA Properties######
