--- a/flightsaware/src/main/resources/application.properties
+++ b/flightsaware/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.com.springsecurity.demo=DEBUG
 ####### Data-Source Properties#######
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://db4.net:3306/rithikabadam
+spring.datasource.url = jdbc:mysql://db4free.net:3306/rithikabadam
 spring.datasource.username = rithikabadam
 spring.datasource.password = d4e42699
 
