--- a/rithika/src/main/resources/application.properties
+++ b/rithika/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port = 3306
 
 #database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/flightaware
+spring.datasource.url=jdbc:mysql://db4.net:3306/rithikabadam
 spring.datasource.username=rithikabadam
 spring.datasource.password=d4e42699
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 
