--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>rithika</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rithika</name>
-	<description>Smartinternz Virtual Internship Project : Flightaware. • View ﬂight prices, route wise ﬂights, country details, city details. • Designed using the frameworks HTML, CSS, Java, Spring boot, Heroku Cloud.</description>
+	<description>Smartinternz VMware Virtual Internship Project : Flightaware</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
